- Option added to turn off Server Query spam (suggested by Telchar).
- German localization updated by Telchar.
- German translation of Burning Crusade quests from Nalumis.
- Simplified Chinese localization updated by yeachan.
- Added all Dungeon Daily quests.

- Updates for Atlas 1.11.0:
	- Renamed Atlas addon paths (Telchar)
	- Moved AtlasQuest frame
	- Updated locations: Zul'Aman, Blackwing Lair, Shadowfang Keep
	- Added Outdoor Raids: Skettis.

- Fixes:
	- Quest names were not being colored blue when CT Mod's Show Quest Level option was on. Big thanks to Denival for the fix!
	- Parentheses in quest names (such as class quests) would break AtlasQuest's blue quest title option. Thanks again to Denival for the fix!
	- Removed Bayi's Extended Questlog fix for quest names since his addon now fixes it.
	- Incorrectly had "Wanted: Shattered Hand Centurions" marked as a Heroic quest.
	- Coordinates of quest giver for Horde quest "Shadowshard Fragments" were wrong.
	- Other miscellanous typos. Thanks to Telchar for finding some I missed.
	- Added name of followup quest for Molten Core: Hands of the Enemy (Thanks Celellach)

- Quests added:
	- Stratholme: The Balance of Light and Shadow (Priest)   (Thanks Celellach)
	- SM Graveyard: Call the Headless Horseman (Daily - Seasonal)   (Thanks Celellach)
	- Underbog: Bring Me A Shrubbery!
	- Underbog: Wanted: A Black Stalker Egg (Heroic Daily)
	- Slave Pens: Wanted: The Heart of Quagmirran (Heroic Daily)
	- Steamvault: Wanted: Coilfang Myrmidons (Daily)
	- Steamvault: Wanted: The Warlord's Treatise (Heroic Daily)
	- Auch Crypts: Wanted: The Exarch's Soul Gem (Heroic Daily)
	- Mana Tombs: Wanted: Shaffar's Wondrous Pendant (Heroic Daily)
	- Sethekk Halls: Wanted: The Headfeathers of Ikiss (Heroic Daily)
	- Shadow Labyrinth: Wanted: Malicious Instructors (Daily)
	- Shadow Labyrinth: Wanted: Murmur's Whisper (Heroic Daily)
	- Escape from Durnholde: Wanted: The Epoch Hunter's Head  (Heroic Daily)